--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -2,6 +2,10 @@ input {
 	tcp {
 		port => 5000
 	}
+	http {	
+		#default host 0.0.0.0:8080
+		codec => json
+	}
 }
 
 ## Add your filters / logstash plugins configuration here
